--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CM</title>
-</head>
-<body>
-    <h1>Coachme.com</h1>
-    
-</body>
+  </head>
+  <body>
+    <h1>Custom-me</h1>
+
+    <div>
+      Tu veux te mettre au sport, mieux manger, changer de look, trouver ta
+      voie, être plus confiant, Tout à la fois ?!
+    </div>
+  </body>
 </html>
