--- a/index.html
+++ b/index.html
@@ -5,13 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CM</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>Custom-me</h1>
-
-    <div>
-      Tu veux te mettre au sport, mieux manger, changer de look, trouver ta
-      voie, être plus confiant, Tout à la fois ?!
-    </div>
+    <header>
+      <div class="triangle left"><h1>Prêt à être customisé?</h1></div>
+      <div class="triangle right"><h1>Prêt à être customisé?</h1></div>
+      <button></button>
+    </header>
+    
+    <nav>
+      <ul>
+        <li>Section 1</li>
+        <li>Section 2</li>
+        <li>Section 3</li>
+      </ul>
+      <div id="nav-close"><i class="fas fa-times"></i></div>
+    </nav>
+    
+    <content>
+      <section>Section 1</section>
+      <section>Section 2</section>
+      <section>Section 3</section>
+    </content>
   </body>
+
+  <script
+  src="https://code.jquery.com/jquery-3.6.0.js"
+  integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
+  crossorigin="anonymous"></script>
+  <script src="demo.js"></script>
 </html>
