--- a/index.html
+++ b/index.html
@@ -4,35 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CM</title>
+    <title>GE</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <header>
-      <div class="triangle left"><h1>Prêt à être customisé?</h1></div>
-      <div class="triangle right"><h1>Prêt à être customisé?</h1></div>
-      <button></button>
+      <h1>Helllo world</h1>
     </header>
     
-    <nav>
-      <ul>
-        <li>Section 1</li>
-        <li>Section 2</li>
-        <li>Section 3</li>
-      </ul>
-      <div id="nav-close"><i class="fas fa-times"></i></div>
-    </nav>
-    
-    <content>
-      <section>Section 1</section>
-      <section>Section 2</section>
-      <section>Section 3</section>
-    </content>
   </body>
-
-  <script
-  src="https://code.jquery.com/jquery-3.6.0.js"
-  integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
-  crossorigin="anonymous"></script>
+  
   <script src="demo.js"></script>
 </html>
