--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
       <h1>En construction</h1>
     </header>
     
+<div>Tu me dois 10€ batard</div>
+
   </body>
   
   <script src="demo.js"></script>
